# arena-lang

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
compile/: CMakeLists.txt
compile/arena-bin/: CMakeLists.txt
compile/arena-bin/src/: main.cpp
compile/codegen/: CMakeLists.txt
compile/frontend/: CMakeLists.txt
compile/frontend/include/ast/: declarations.hpp  expressions.hpp  literals.hpp  node.hpp  recursive_visitor.hpp  statements.hpp  throwing_visitor.hpp  token.hpp  types.hpp  visitor.hpp
compile/frontend/include/errors/: errors.hpp  line_endings.hpp  renderer.hpp
compile/frontend/include/parse/: parse.hpp
compile/frontend/include/query/: engine.hpp  queries.hpp
compile/frontend/include/resolve/: error.hpp  expressions.hpp  functions.hpp  imports.hpp  symbols.hpp  tree.hpp  tree_transform.hpp  types.hpp  variables.hpp
compile/frontend/include/signatures/: functions.hpp  lifetimes.hpp  types.hpp
compile/frontend/include/types/: inference.hpp  lifetimes.hpp  operations.hpp  substitute.hpp  typecheck.hpp
compile/frontend/include/util/: arena.hpp  concat.hpp
compile/frontend/src/ast/: token.cpp
compile/frontend/src/errors/: line_endings.cpp  renderer.cpp
compile/frontend/src/parse/: parse.cpp
compile/frontend/src/query/: engine.cpp  queries.cpp
compile/frontend/src/resolve/: expressions.cpp  functions.cpp  symbols.cpp
compile/frontend/src/signatures/: functions.cpp  lifetimes.cpp  types.cpp
compile/frontend/src/types/: inference.cpp  lifetimes.cpp  operations.cpp  substitute.cpp  typecheck.cpp
compile/lang_tests/: run_test.sh
compile/lang_tests/lifetimes/arena/: arena_vs_static.rna  arena_vs_static.rna.expected  nested_arenas.rna  nested_arenas.rna.expected
compile/lang_tests/lifetimes/free/: assigned_stack.rna  assigned_stack.rna.expected  long_chain.rna  long_chain.rna.expected
compile/lang_tests/lifetimes/function_boundary/: free_lifetimes.rna  free_lifetimes.rna.expected  implicit_free_lifetime.rna  implicit_free_lifetime.rna.expected  pass_static.rna  pass_static.rna.expected  share_arena.rna  share_arena.rna.expected
compile/lang_tests/lifetimes/lifetime_strict/: const_struct.rna  const_struct.rna.expected  nested_ptr.rna  nested_ptr.rna.expected  struct_ptr.rna  struct_ptr.rna.expected
compile/lang_tests/lifetimes/stack/: addr_of_stack_lifetimes.rna  addr_of_stack_lifetimes.rna.expected  stack_as_arena.rna  stack_as_arena.rna.expected  stack_nesting.rna  stack_nesting.rna.expected
compile/lang_tests/typechecking/assignable/: compatible_pointers.rna  compatible_pointers.rna.expected  compatible_pointers_nested.rna  compatible_pointers_nested.rna.expected  const_non_const.rna  const_non_const.rna.expected  incompatible_pointers.rna  incompatible_pointers.rna.expected  incompatible_pointers_nested.rna  incompatible_pointers_nested.rna.expected  mixed_pointers.rna  mixed_pointers.rna.expected
compile/lang_tests/typechecking/calls/: call_correctargs.rna  call_correctargs.rna.expected  call_toofew.rna  call_toofew.rna.expected  call_toomany.rna  call_toomany.rna.expected  call_unknown.rna  call_unknown.rna.expected  call_wrongarg.rna  call_wrongarg.rna.expected  invalid_use_return.rna  invalid_use_return.rna.expected  valid_use_return.rna  valid_use_return.rna.expected
compile/lang_tests/typechecking/inference/: addr_constrain.rna  addr_constrain.rna.expected  assign_infer.rna  assign_infer.rna.expected  bool_not_constrain.rna  bool_not_constrain.rna.expected  cant_infer.rna  cant_infer.rna.expected  deref_constrain.rna  deref_constrain.rna.expected  init_infer.rna  init_infer.rna.expected
compile/lang_tests/typechecking/literals/: double_literal.rna  double_literal.rna.expected  int_literal.rna  int_literal.rna.expected  string_literal.rna  string_literal.rna.expected
compile/lang_tests/typechecking/operators/addrof/: addrof_param_ok.rna  addrof_param_ok.rna.expected  addrof_var_ok.rna  addrof_var_ok.rna.expected
compile/lang_tests/typechecking/operators/compare/: rel_ints_ok.rna  rel_ints_ok.rna.expected
compile/lang_tests/typechecking/operators/deref/: deref_const.rna  deref_const.rna.expected  deref_int_not_ok.rna  deref_int_not_ok.rna.expected  deref_ptr_ok.rna  deref_ptr_ok.rna.expected
compile/lang_tests/typechecking/operators/math/: add_ints_ok.rna  add_ints_ok.rna.expected  div_ints_ok.rna  div_ints_ok.rna.expected  mul_ints_ok.rna  mul_ints_ok.rna.expected  sub_ints_ok.rna  sub_ints_ok.rna.expected
compile/llvm/: CMakeLists.txt
compile/llvm/src/: main.cpp
include/ast/: declarations.hpp  expressions.hpp  literals.hpp  node.hpp  statements.hpp  token.hpp  types.hpp
lib/: CMakeLists.txt
lib/c/: CMakeLists.txt
lib/c/include/: arena.h
lib/c/src/: arena.c
lib/c/test/: test_arena.c
specification/: 01-assignable.md
src/: CMakeLists.txt  main.cpp
src/parse/: parse.cpp
